--- a/src/ejercicio-01/index.html
+++ b/src/ejercicio-01/index.html
@@ -6,10 +6,15 @@
     <title>Ejercicio 1: Selección de Elementos por ID</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    <div id="miElemento">Texto inicial</div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      // Ejercicio 1: Selección de Elementos por ID
+
+      // Selecciona un elemento por su ID único y cambia su contenido utilizando JavaScript. En este ejercicio, aprenderás a utilizar getElementById para acceder a un elemento específico en el DOM y modificar su contenido.
+      const elemento = document.getElementById('miElemento')
+      elemento.textContent = 'Mi primer ejercicio de DOM'
+
     </script>
   </body>
 </html>
