--- a/src/ejercicio-03/index.html
+++ b/src/ejercicio-03/index.html
@@ -6,10 +6,16 @@
     <title>Ejercicio 3: Selección de Elementos con `querySelector`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
-
+    
+    <input type="text" id="miInput" value="Valor de salida" />
+    
     <script>
-      // Escribe tu codigo javascript aqui
+      // Ejercicio 3: Selección de Elementos con querySelector
+
+      // Utiliza querySelector para seleccionar un elemento de un formulario y cambia su valor utilizando JavaScript. Aprenderás cómo seleccionar un elemento específico de un formulario y modificar su contenido.
+      const inputElement = document.querySelector('input[type="text"]')
+      inputElement.value = 'Nuevo valor'
+
     </script>
   </body>
 </html>
