--- a/src/ejercicio-02/index.html
+++ b/src/ejercicio-02/index.html
@@ -6,10 +6,19 @@
     <title>Ejercicio 2: Selección de Elementos por Clase</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    <div class="claseEspecifica">Elemento 1</div>
+    <div class="claseDiferente">Elemento 2</div>
+    <div class="claseEspecifica">Elemento 3</div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      // Ejercicio 2: Selección de Elementos por Clase
+
+      // Selecciona todos los elementos con una clase específica y cambia sus estilos usando JavaScript. Este ejercicio te muestra cómo utilizar getElementsByClassName para seleccionar varios elementos y aplicarles cambios en el estilo.
+      const elementos = document.getElementsByClassName('claseEspecifica')
+      for (const elemento of elementos) {
+        elemento.style.backgroundColor = 'blue'
+      }
+
     </script>
   </body>
 </html>
