--- a/src/ejercicio-04/index.html
+++ b/src/ejercicio-04/index.html
@@ -6,10 +6,20 @@
     <title>Ejercicio 4: Selección de Elementos con `querySelectorAll`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    
+    <p>Primer párrafo</p>
+    <p>Segundor párrafo</p>
+    <p>Tercer párrafo</p>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      
+      // Ejercicio 4: Selección de Elementos con querySelectorAll
+      // Utiliza querySelectorAll para seleccionar todos los elementos de un tipo específico y ocultarlos. Aprenderás cómo seleccionar varios elementos y aplicar una acción a todos ellos.
+      const elementos = document.querySelectorAll('p')
+      elementos.forEach((elemento) => {
+        elemento.style.display = 'none'
+      })
+
     </script>
   </body>
 </html>
