--- a/src/ejercicio-05/index.html
+++ b/src/ejercicio-05/index.html
@@ -6,10 +6,16 @@
     <title>Ejercicio 5: Cambio de Contenido con `textContent`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    
+    <div id="miElemento">Texto inicial</div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      
+      // Ejercicio 5: Cambio de Contenido con textContent
+      // Cambia el texto contenido dentro de un elemento utilizando textContent en JavaScript. Este ejercicio te mostrará cómo modificar el texto visible en un elemento HTML.
+      const elemento = document.getElementById('miElemento')
+      elemento.textContent = "Texto modificado"
+
     </script>
   </body>
 </html>
