--- a/src/ejercicio-07/index.html
+++ b/src/ejercicio-07/index.html
@@ -6,10 +6,16 @@
     <title>Ejercicio 7: Cambio de Atributos con `setAttribute`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    
+    <div id="miElemento">Elemento de atributo</div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      
+      // Ejercicio 7: Cambio de Atributos con setAttribute
+      // Utiliza setAttribute para establecer o modificar el valor de un atributo en un elemento HTML. En este ejercicio, aprenderás a cambiar los atributos de un elemento.
+      const elemento = document.getElementById('miElemento')
+      elemento.setAttribute('data-nuevo', 'valor')
+
     </script>
   </body>
 </html>
