--- a/src/ejercicio-08/index.html
+++ b/src/ejercicio-08/index.html
@@ -6,10 +6,16 @@
     <title>Ejercicio 8: Cambio de Estilos con `style`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    
+    <div id="miElemento">Elemento con estilo</div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+
+      // Ejercicio 8: Cambio de Estilos con style
+      // Cambia los estilos de un elemento utilizando la propiedad style en JavaScript. Aprenderás a aplicar estilos dinámicamente a un elemento.
+      const elemento = document.getElementById('miElemento')
+      elemento.style.backgroundColor = 'red'
+    
     </script>
   </body>
 </html>
