--- a/src/ejercicio-09/index.html
+++ b/src/ejercicio-09/index.html
@@ -6,10 +6,16 @@
     <title>Ejercicio 9: Manipulación de Clases con `classList`</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    
+    <div id="miElemento">Elemento con clase</div>
 
     <script>
-      // Escribe tu codigo javascript aqui
+      
+      // Ejercicio 9: Manipulación de Clases con classList
+      // Agrega una clase a un elemento utilizando classList en JavaScript. Este ejercicio te mostrará cómo manipular las clases de un elemento.
+      const elemento = document.getElementById('miElemento')
+      elemento.classList.add('nuevaClase')
+
     </script>
   </body>
 </html>
