--- a/src/ejercicio-18/index.html
+++ b/src/ejercicio-18/index.html
@@ -6,10 +6,28 @@
     <title>Ejercicio 18: Evento Personalizado y Disparo</title>
   </head>
   <body>
-    <!-- Escribe tu codigo html aqui -->
+    
+    <button id="miBoton">Disparar Evento Personalizado</button>
+
 
     <script>
-      // Escribe tu codigo javascript aqui
+      
+      // Ejercicio 18: Evento Personalizado y Disparo
+      // Crea un evento personalizado y asígneselo a un elemento, luego escucha ese evento y realiza una acción cuando se dispara.
+      const boton = document.getElementById('miBoton')
+      function crearEventoPersonalizado() {
+        const eventoPersonalizado = new Event('eventoPersonalizado')
+        boton.dispatchEvent(eventoPersonalizado)
+      }
+
+      boton.addEventListener('eventoPersonalizado', () => {
+        alert('¡Evento personalizado disparado!')
+      })
+
+      boton.addEventListener('click', () => {
+        crearEventoPersonalizado()
+      })
+
     </script>
   </body>
 </html>
