Añadir ejercicio-07 nuevo

--- a/src/ejercicio-07/index.html
+++ b/src/ejercicio-07/index.html
@@ -14,7 +14,7 @@
       // Ejercicio 7: Cambio de Atributos con setAttribute
       // Utiliza setAttribute para establecer o modificar el valor de un atributo en un elemento HTML. En este ejercicio, aprenderás a cambiar los atributos de un elemento.
       const elemento = document.getElementById('miElemento')
-      elemento.setAttribute('data-nuevo', 'valor')
+      elemento.setAttribute('nuevo-atributo', 'valor')
 
     </script>
   </body>
